--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div>
         <div>
             <img src="profile-icon.png" alt="Ícono de perfil">
-            <h2>Jusef Carrillo</h2>
+            <h2>Oscar Eias Ramirez Guzman</h2>
             <p>Personal</p>
             <p>chidonlongo@gmail.com</p>
         </div>
